fix statistics query logic
